# adventofcode

./: .gitignore  LICENSE  README.md  advent.cabal  default.nix  shell.nix
nix/: QuickCheck.nix  base-prelude.nix  hspec.nix  optparse-applicative.nix
src/: Main.hs
src/Advent/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
test/Advent/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs
