name:                advent
version:             0.1.0.0
synopsis:            Advent of Code
license:             MIT
license-file:        LICENSE
author:              Jack Henahan
maintainer:          jhenahan@me.com
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Advent.Day1
  other-extensions:    NoImplicitPrelude, LambdaCase
  build-depends:       base >=4.8 && <4.9,
                       base-prelude >=0.1 && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  
test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
                base >= 4.8 && <4.9,
                base-prelude >=0.1 && <0.2,
                advent,
                QuickCheck,
                hspec