name:                advent
version:             0.1.0.0
synopsis:            Advent of Code
license:             MIT
license-file:        LICENSE
author:              Jack Henahan
maintainer:          jhenahan@me.com
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Advent.Day1
  other-extensions:    NoImplicitPrelude, LambdaCase
  build-depends:       base >=4.8 && <4.9,
                       base-prelude
  hs-source-dirs:      src
  default-language:    Haskell2010

executable advent
  other-extensions:    NoImplicitPrelude
  build-depends: base >=4.8 && <4.9,
                 base-prelude,
                 optparse-applicative,
                 advent
  hs-source-dirs: src
  main-is: Main.hs
                             
  
test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  other-extensions:    NoImplicitPrelude
  build-depends:
                base >= 4.8 && <4.9,
                base-prelude,
                advent,
                QuickCheck,
                hspec